Created thumb for video

--- a/client/templates/filter.html
+++ b/client/templates/filter.html
@@ -12,6 +12,9 @@
 	        <div class="dish-image" ng-if="filter.image">
 	        	<img id="clickedImage" src="{{filter.image}}" alt=""/>
 	        </div>
+	        <div class="dish-image" ng-if="filter.videoImage">
+	        	<img id="clickedImage" src="{{filter.videoImage}}" alt=""/>
+	        </div>
         </div>
     	<div class="slide-wrap">
     		<h3>Filter</h3>
