--- a/client/templates/filter.html
+++ b/client/templates/filter.html
@@ -12,8 +12,9 @@
 	        <div class="dish-image" ng-if="filter.image">
 	        	<img id="clickedImage" src="{{filter.image}}" alt=""/>
 	        </div>
-	        <div class="dish-image" ng-if="filter.videoImage">
+	        <div class="dish-image play-video" ng-if="filter.videoImage" ng-click="filter.playVideo()">
 	        	<img id="clickedImage" src="{{filter.videoImage}}" alt=""/>
+	        	<a href="javascript:void(0)"><img src="./play.png" alt=""/></a>
 	        </div>
         </div>
     	<div class="slide-wrap">
@@ -52,7 +53,7 @@
 					</div>
     			</div>
             </div>
-    		<a href="javascript:void(0)" class="next-btn" ng-click="filter.playVideo()">Next</a>
+    		<a href="javascript:void(0)" class="next-btn">Next</a>
     	</div>
     </ion-content>
 </ion-view>
