--- a/client/templates/filter.html
+++ b/client/templates/filter.html
@@ -7,7 +7,7 @@
 		    </div>
 	    </div>
     </ion-header-bar>
-    <ion-content>
+    <ion-content>{{filter.hideLoading}}
         <div class="full_back_slide suggest">
 	        <div class="dish-image" ng-if="filter.image">
 	        	<img id="clickedImage" src="{{filter.image}}" alt=""/>
