--- a/client/templates/login.html
+++ b/client/templates/login.html
@@ -21,7 +21,7 @@
         </div>
       </div>
 
-      <form name="loginForm" validation-schema schema="Register" ng-submit="login.userLogin(loginForm)">
+      <form name="loginForm" validation-schema schema="Register" ng-submit="login.userLogin(loginForm)" class="log-form">
         <label class="item-input item-floating-label sign_lbl">
           <span class="icon-wrap">
             <span class="icon-top"><img src="./mail.png" alt="" /></span>
