latest changes of styles

--- a/client/templates/profile.html
+++ b/client/templates/profile.html
@@ -27,10 +27,10 @@
                     </div>
                     
                     <div class="bttn-wrap">
-                        <button class="button button-block button-light edit-btn" ng-click="profile.redirectTo()">
+                        <a class="button button-block button-light edit-btn" href="/settings">
                             <span><img src="/edit.png" alt=""/></span>
                             Edit Profile
-                        </button>
+                        </a>
                     </div>
                    
                 </div>
