--- a/client/styles/style.css
+++ b/client/styles/style.css
@@ -351,8 +351,8 @@ box-shadow:         0px 1px 3px 0px rgba(0, 0, 0, 0.29);}
   }
 @media(max-width:460px){
   .logo {height: 125px;width:165px}
-  .resturant-detail h3{font-size:22px}log-form
-  .resturant-name{max-height:40px;overflow:hidden}
+  .resturant-detail h3{font-size:22px}
+  .feed .resturant-name{max-height:22px;overflow:hidden}
   .edit-btn{font-size:18px}
   .reviews-final .dsh-img{height: 100px;width: 100px;}
 }
@@ -376,6 +376,7 @@ box-shadow:         0px 1px 3px 0px rgba(0, 0, 0, 0.29);}
   }
 @media(max-width:360px)
 {
+  .feed .resturant-name{max-height:16px;}
   .create{padding-left:5px;font-size:14px;}
   .login{padding-right:5px;font-size:16px;} 
   .log_btn{font-size:18px}
