Displayed users post in profile section

--- a/client/templates/dishdetail.html
+++ b/client/templates/dishdetail.html
@@ -21,11 +21,13 @@
                     <div class="mobi-50">
                     	<div class="resturant-rate text-right">
                         	<span>
-                                <i class="icon ion-ios-star"></i>
-                                <i class="icon ion-ios-star"></i>
-                                <i class="icon ion-ios-star"></i>
-                                <i class="icon ion-ios-star-outline"></i>
-                                <i class="icon ion-ios-star-outline"></i>
+                                <span class="star-img">
+                                    <img src="/fill-star.png" alt=""/>
+                                    <img src="/fill-star.png" alt=""/>
+                                    <img src="/fill-star.png" alt=""/>
+                                    <img src="/half-star.png" alt=""/>
+                                    <img src="/empty-star.png" alt=""/>
+                                </span>
                            </span>
                         </div>
                     </div>
