--- a/client/templates/suggestion.html
+++ b/client/templates/suggestion.html
@@ -8,7 +8,7 @@
 		</div>
 	</ion-header-bar>
 	<ion-content>
-		<div class="full_back suggest">
+	  <div class="full_back suggest">
 			<div class="row">
           		<div class="col col-33">
                     <div class="div1">
@@ -187,5 +187,11 @@
                 </div>
 			</div>
    		</div>
-	</ion-content>
+<!-- 	   <div class="no-suggestion">
+      <div class="no-content">
+        <h4>No suggestions currently available</h4>
+        <p>Try the search icon below to search by tags and more</p>
+      </div>
+    </div> -->
+  </ion-content>
 </ion-view>
