latest changes for profile section

--- a/client/templates/suggestion.html
+++ b/client/templates/suggestion.html
@@ -11,7 +11,7 @@
 	  <div class="full_back suggest">
 			<div class="row">
           		<div class="col col-33">
-                    <div class="div1">
+                    <a class="div1" ng-click="suggestion.redirectTo()">
                         <img src="/d1.png"/>
                         <div class="rating-value">
                         	<span>
@@ -27,10 +27,10 @@
                     	</div>
                         <p class="dish-name">Tasty chicken tacos...</p>
                         <p class="resturant-name">KFC Restaurant</p>
-                    </div>
+                    </a>
           		</div>
                 <div class="col col-33">
-                    <div class="div1">
+                    <div class="div1" ng-click="suggestion.redirectTo()">
                         <img src="/d3.png"/>
                         <div class="rating-value">
                         	<span>
@@ -49,7 +49,7 @@
                     </div>
                 </div>
                 <div class="col col-33">
-                	<div class="div1">
+                	<div class="div1" ng-click="suggestion.redirectTo()">
                         <img src="/d1.png"/>
                         <div class="rating-value">
                         	<span>
