--- a/client/templates/settings.html
+++ b/client/templates/settings.html
@@ -2,14 +2,66 @@
   <ion-header-bar align-title="left" class="bar-positive">
     <div class="bar bar-header bar-light head_bar">
       <div class="back_arrrow">
-        <span class="sp2"><a ui-sref="tab.profile"><img src="left-arrow.png" alt=""/></a></span>  
+        <span class="sp2"><a ui-sref="tab.profile"><img src="left-arrow.png" alt=""/></a></span>
         <h2>Edit Profile</h2>
       </div>
     </div>
   </ion-header-bar>
   <ion-content>
-    <div class="full_back suggest">
-      <a ng-click="settings.logout()" style="cursor: pointer;"><strong>Logout</strong></a>
+    <div class="full_back suggest reviews">
+      <div class="row">
+        <div class="col">
+          <div class="center-img">
+            <img src="./user_none.png" alt=""/>
+            <p><a href="javascipt:void(0)">Change Photo</a></p>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col">
+          <div class="review-form edit-profile">
+            <div class="list list_item switch-notify">
+              <label class="item-input item-floating-label">
+                <span class="icon-top user"><img src="./user.png" alt="" ></span>
+                <span class="icon-wrap">
+                  <input type="text" placeholder="First Name">
+                </span>
+              </label>
+              <label class="item-input item-floating-label">
+                <span class="icon-top user"><img src="./user.png" alt="" ></span>
+                <span class="icon-wrap">
+                  <input type="text" placeholder="Last Name">
+                </span>
+              </label>
+              <label class="item-input item-floating-label">
+                <span class="icon-top user"><img src="./zip.png" alt="" class=""></span>
+                <span class="icon-wrap">
+                  <input type="text" placeholder="Zip Code">
+                </span>
+              </label>
+
+              <label class="toggle toggle-balanced">
+                <span class="icon-top user"><img src="./notify.png" alt="" class=""></span> 
+                <input type="checkbox">
+                <div class="track">
+                  <div class="handle"></div>
+                </div>
+              </label>
+            </div>
+          </div>
+        </div>
+      </div>
+      <a href="javascript:void(0)" class="next-btn">Update</a>
     </div>
-  </ion-content>
+    <div class="row">
+      <div class="col text-center">
+        <a href="/change_password" class="changepass">Change Password</a>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col text-center">
+        <a ng-click="settings.logout()" class="changepass">Logout</a>
+      </div>
+    </div>
+  </ion-content>  
 </ion-view>
