resolved programming feedback

--- a/client/templates/location.html
+++ b/client/templates/location.html
@@ -45,7 +45,7 @@
             <div class="row">
             	<div class="col">
                 	<div class="rate-box">
-                    	<ng-rate-it ng-model="data.rating" star-width="30" star-height="30"></ng-rate-it>
+                    	<ng-rate-it ng-model="data.rating" step="1" star-width="30" star-height="30"></ng-rate-it>
                     </div>
                 </div>
             </div>
