--- a/client/templates/dishdetail.html
+++ b/client/templates/dishdetail.html
@@ -48,12 +48,12 @@
                     	</div>
                     	<div class="col col-67">
                         	<div class="user-rate">
-                                <span>
-                                    <i class="icon ion-ios-star"></i>
-                                    <i class="icon ion-ios-star"></i>
-                                    <i class="icon ion-ios-star"></i>
-                                    <i class="icon ion-ios-star-outline"></i>
-                                    <i class="icon ion-ios-star-outline"></i>
+                                <span class="star-img">
+                                    <img src="/fill-star.png" alt=""/>
+                                    <img src="/fill-star.png" alt=""/>
+                                    <img src="/fill-star.png" alt=""/>
+                                    <img src="/half-star.png" alt=""/>
+                                    <img src="/empty-star.png" alt=""/>
                                </span>
                                <span class="pull-right user-name">
                                     <span>Z. Ibrahimović</span>
@@ -77,12 +77,12 @@
                     	</div>
                     	<div class="col col-67">
                         	<div class="user-rate">
-                                <span>
-                                    <i class="icon ion-ios-star"></i>
-                                    <i class="icon ion-ios-star"></i>
-                                    <i class="icon ion-ios-star"></i>
-                                    <i class="icon ion-ios-star-outline"></i>
-                                    <i class="icon ion-ios-star-outline"></i>
+                                <span class="star-img">
+                                    <img src="/fill-star.png" alt=""/>
+                                    <img src="/fill-star.png" alt=""/>
+                                    <img src="/fill-star.png" alt=""/>
+                                    <img src="/half-star.png" alt=""/>
+                                    <img src="/empty-star.png" alt=""/>
                                </span>
                                <span class="pull-right user-name">
                                     <span>Z. Ibrahimović</span>
@@ -106,12 +106,12 @@
                     	</div>
                     	<div class="col col-67">
                         	<div class="user-rate">
-                                <span>
-                                    <i class="icon ion-ios-star"></i>
-                                    <i class="icon ion-ios-star"></i>
-                                    <i class="icon ion-ios-star"></i>
-                                    <i class="icon ion-ios-star-outline"></i>
-                                    <i class="icon ion-ios-star-outline"></i>
+                                <span class="star-img">
+                                    <img src="/fill-star.png" alt=""/>
+                                    <img src="/fill-star.png" alt=""/>
+                                    <img src="/fill-star.png" alt=""/>
+                                    <img src="/half-star.png" alt=""/>
+                                    <img src="/empty-star.png" alt=""/>
                                </span>
                                <span class="pull-right user-name">
                                     <span>Z. Ibrahimović</span>
@@ -135,12 +135,12 @@
                     	</div>
                     	<div class="col col-67">
                         	<div class="user-rate">
-                                <span>
-                                    <i class="icon ion-ios-star"></i>
-                                    <i class="icon ion-ios-star"></i>
-                                    <i class="icon ion-ios-star"></i>
-                                    <i class="icon ion-ios-star-outline"></i>
-                                    <i class="icon ion-ios-star-outline"></i>
+                                <span class="star-img">
+                                    <img src="/fill-star.png" alt=""/>
+                                    <img src="/fill-star.png" alt=""/>
+                                    <img src="/fill-star.png" alt=""/>
+                                    <img src="/half-star.png" alt=""/>
+                                    <img src="/empty-star.png" alt=""/>
                                </span>
                                <span class="pull-right user-name">
                                     <span>Z. Ibrahimović</span>
@@ -164,12 +164,12 @@
                     	</div>
                     	<div class="col col-67">
                         	<div class="user-rate">
-                                <span>
-                                    <i class="icon ion-ios-star"></i>
-                                    <i class="icon ion-ios-star"></i>
-                                    <i class="icon ion-ios-star"></i>
-                                    <i class="icon ion-ios-star-outline"></i>
-                                    <i class="icon ion-ios-star-outline"></i>
+                                <span class="star-img">
+                                    <img src="/fill-star.png" alt=""/>
+                                    <img src="/fill-star.png" alt=""/>
+                                    <img src="/fill-star.png" alt=""/>
+                                    <img src="/half-star.png" alt=""/>
+                                    <img src="/empty-star.png" alt=""/>
                                </span>
                                <span class="pull-right user-name">
                                     <span>Z. Ibrahimović</span>
@@ -193,12 +193,12 @@
                     	</div>
                     	<div class="col col-67">
                         	<div class="user-rate">
-                                <span>
-                                    <i class="icon ion-ios-star"></i>
-                                    <i class="icon ion-ios-star"></i>
-                                    <i class="icon ion-ios-star"></i>
-                                    <i class="icon ion-ios-star-outline"></i>
-                                    <i class="icon ion-ios-star-outline"></i>
+                                <span class="star-img">
+                                    <img src="/fill-star.png" alt=""/>
+                                    <img src="/fill-star.png" alt=""/>
+                                    <img src="/fill-star.png" alt=""/>
+                                    <img src="/half-star.png" alt=""/>
+                                    <img src="/empty-star.png" alt=""/>
                                </span>
                                <span class="pull-right user-name">
                                     <span>Z. Ibrahimović</span>
