--- a/client/templates/filter.html
+++ b/client/templates/filter.html
@@ -19,7 +19,7 @@
         </div>
     	<div class="slide-wrap">
     		<div ng-if="filter.image">
-	    		<h3>Filter</h3>
+	    		<h3>Choose a filter</h3>
 	    		<div class="row">
 	    			<div class="responsive">
 						<div ng-repeat="effect in filter.effects">
